api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api-deployment
  namespace: hello-api
  labels:
    app: hello-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-api
  template:
    metadata:
      labels:
        app: hello-api
    spec:
      containers:
        - name: hello-api
          image: hello-api:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-api-service
  namespace: hello-api
spec:
  selector:
    app: hello-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
