api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-api-ingress
  namespace: hello-api
spec:
  ingressClassName: "nginx"
  rules:
    - host: minikube.node
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-api-service
                port:
                  number: 3000
